# remniw

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
brainfuck/: brainfuck.c  brainfuck.rw  brainfuck2.rw
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
docs/: AssemblyCodegen.md  FrontEnd.md  LLVMIRCodegen.md  Optimizer.md  Semantic.md
grammar/: Remniw.g4
src/: CMakeLists.txt  config.h  config.h.in  driver.cpp  main.cpp  test.cpp
src/codegen/: CMakeLists.txt
src/codegen/asm/: AsmBuilder.h  AsmBuilderHelper.brg  AsmBuilderHelper.cpp  AsmBuilderHelper.gen  AsmBuilderHelper.h  AsmCodeGenetator.h  AsmContext.cpp  AsmContext.h  AsmFunction.cpp  AsmFunction.h  AsmInstruction.cpp  AsmInstruction.h  AsmOperand.h  AsmPrinter.h  AsmRewriter.h  AsmSymbol.h  BrgTerm.cpp  BrgTerm.gen  BrgTreeBuilder.h  CMakeLists.txt  LiveInterval.h  Register.h  RegisterAllocator.h  TargetInfo.h  remniw-llc.cpp
src/codegen/asm/RISCV/: RISCVAsmBuilder.cpp  RISCVAsmBuilder.h  RISCVAsmPrinter.h  RISCVAsmRewriter.h  RISCVTargetInfo.h  riscv.wip.patch
src/codegen/asm/X86/: X86AsmBuilder.cpp  X86AsmBuilder.h  X86AsmPrinter.h  X86AsmRewriter.h  X86InstrInfo.h  X86RegisterInfo.h  X86TargetInfo.h
src/codegen/ir/: CMakeLists.txt  IRCodeGenerator.cpp  IRCodeGenerator.h  IRCodeGeneratorImpl.cpp  IRCodeGeneratorImpl.h
src/frontend/: AST.h  ASTBuilder.cpp  ASTBuilder.h  ASTPrinter.h  CMakeLists.txt  FrontEnd.cpp  FrontEnd.h  RecursiveASTVisitor.h  Type.cpp  Type.h
src/runtime/: CMakeLists.txt  error_report.cpp  error_report.h  guarded_pool_allocator.cpp  guarded_pool_allocator.h  guarded_pool_allocator_state.cpp  guarded_pool_allocator_state.h  mutex.h  options.cpp  options.h  options.inc  test1.cpp  test2.cpp  test_ctor.ll  utils.h
src/runtime/aphotic_shield/: CMakeLists.txt  aphotic_shield_allocator.cpp  aphotic_shield_allocator.h  aphotic_shield_interface.cpp  aphotic_shield_interface.h  error_report.cpp  error_report.h  guarded_pool_allocator.cpp  guarded_pool_allocator.h  mutex.h  options.cpp  options.h  utils.h
src/semantic/: CMakeLists.txt  SymbolTable.h  TypeAnalysis.cpp  TypeAnalysis.h
test/: CMakeLists.txt  a1.rw.todo  a2.rw.todo  a4.rw  a6.rw.todo  a7.rw  apply.rw  array2.rw  array4.rw  array5.rw  array5.rw.wip  array8.rw  available.rw  block.rw  block_decl.rw  brainfuck.rw  cfg.rw  code.rw  copyconst.rw  div.rw  equal.rw.todo  err_cmpfunc.rw.todo  err_decl_use.rw.todo  err_doubledecl1.rw.todo  err_func.rw.todo  err_locals.rw.todo  err_notlocal.rw.todo  err_notlocal2.rw.todo  err_unify1.rw.todo  err_unify2.rw.todo  error.rw.todo  ex1.rw  factorial_iterative.rw  factorial_recursive.rw  fib.rw  if_short_if.rw  interval0.rw  lit.site.cfg.py.in  liveness.rw  locals.rw  (+23 more)
test/codegen/: 7x7.rw  a1.rw.todo  a2.rw  a3.rw  a4.rw  a7.rw  alloc1.rw  alloc2.rw  alloc3.rw  alloc4.rw  alloc5.rw  andersen.rw  andersen.rw.todo  apply.rw  array1.rw  array2.rw  array3.rw  array4.rw  array5.rw  array6.rw  array7.rw  array8.rw  available.rw  block.rw  block_decl.rw  brainfuck.rw  cfa.rw  cfg.rw  cmpfunc.rw.todo  code.rw  comp.rw  constants1.rw  constants2.rw  copyconst.rw  copyconst2.rw  div.rw  div2.rw  err_assignfunc.rw.todo  err_cmpfunc2.rw.todo  err_cmpfunc3.rw.todo  (+65 more)
test/runtime/: CMakeLists.txt  double-free.rw  heap-buffer-overflow.rw  heap-buffer-underflow.rw  lit.cfg.py  lit.site.cfg.py.in  test-double-free.cpp  test-heap-buffer-overflow.cpp  test-heap-buffer-underflow.cpp  test-invalid-free-left.cpp  test-invalid-free-right.cpp  test-use-after-free.cpp  use-after-free.rw
utils/: bootstrap.sh  install-riscv.sh
